k8s/vault-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault
    spec:
      containers:
      - name: vault
        image: hashicorp/vault:latest
        command:
        - "/bin/sh"
        - "-c"
        - |
          [...]
        ports:
        - containerPort: 8200
          name: vault-api
        - containerPort: 8201
          name: vault-cluster
        securityContext:
          capabilities:
            add: ["IPC_LOCK"]
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
spec:
  ports:
  - name: http
    port: 8200
    targetPort: 8200
  selector:
    app.kubernetes.io/name: vault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-agent-injector
  namespace: vault
  labels:
    app.kubernetes.io/name: vault-agent-injector
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault-agent-injector
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault-agent-injector
    spec:
      serviceAccountName: vault-agent-injector
      containers:
      - name: sidecar-injector
        image: hashicorp/vault-k8s:latest
        args:
        - agent-inject
        - 2>&1
        livenessProbe:
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTPS
          failureThreshold: 2
          initialDelaySeconds: 5
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 5
---
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: vault-agent-injector-cfg
webhooks:
- name: vault.hashicorp.com
  admissionReviewVersions:
  - "v1beta1"
  - "v1"
  clientConfig:
    service:
      name: vault-agent-injector-svc
      namespace: vault
      path: "/mutate"
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  sideEffects: None
  failurePolicy: Ignore
---
apiVersion: v1
kind: Service
metadata:
  name: vault-agent-injector-svc
  namespace: vault
  labels:
    app.kubernetes.io/name: vault-agent-injector
spec:
  ports:
  - port: 443
    targetPort: 8080
  selector:
    app.kubernetes.io/name: vault-agent-injector
